testsuite/tests/typecheck/should_fail/T3155.stderr

T3155.hs:13:9: error:
    Illegal symbol ‘forall’ in type
    Perhaps you intended to use RankNTypes or a similar language
    extension to enable explicit-forall syntax: forall <tvs>. <type>
